# gameboy-emulator

./: .gitignore  Astatin-logo.gbasm  Cargo.toml  LICENSE  README.md  TODO  http.rom  test
.github/workflows/: rust.yml
assets/: Astatin-bootrom.gbasm  README  dmg_boot.bin.astatin
assets/web/: index.html  script.js
src/: audio.rs  consts.rs  display.rs  gamepad.rs  interrupts_timers.rs  io.rs  lib.rs  lib_wasm.rs  logs.rs  main.rs  mmio.rs  opcodes.rs  serial.rs  state.rs  utils_wasm.rs  window.rs
src/desktop/: audio.rs  input.rs  load_save.rs  mod.rs  serial.rs  window.rs
src/wasm/: emulator.rs  input.rs  load_save.rs  mod.rs
