[package]
name = "emulator"
version = "0.1.0"
edition = "2021"
authors = ["Astatin <astatin@redacted>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.24"
rodio = "0.17"
gilrs = "0.10.2"
clap = { version = "4.3.21", features = ["derive"] }

[profile.dev]
overflow-checks = false
