[package]
name = "emulator"
version = "0.1.0"
edition = "2021"
authors = ["Astatin <astatin@redacted>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = { version = "0.21", default-features = false, features = ["playback"] }
cpal = "0.16"
gilrs = "0.10.2"
clap = { version = "4.3.21", features = ["derive"] }
pixels = "0.15"
winit = "0.29"
winit_input_helper = "0.15"

[profile.dev]
overflow-checks = false
